--- a/practica2/Views/Home/Index.cshtml
+++ b/practica2/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     </div>
 
     <div>
-        <button class="btn btn-primary" id="registro">Registrarme</button>
+        <button class="btn btn-primary" >Registrarme</button>
     </div>
     
 </div>
