--- a/practica2/Views/Home/Index.cshtml
+++ b/practica2/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
         <h1 class="titulo">
         <center>Carrusel </center>
         </h1>
@@ -35,7 +34,7 @@
     </div>
 
     <div>
-        <button class="btn btn-primary" >Registrarme</button>
+        <a asp-area="" asp-controller="Home" asp-action="Registro" class="btn btn-primary">Adoptar Mascota</a>
     </div>
     
 </div>
