--- a/practica2/Views/Home/registro.cshtml
+++ b/practica2/Views/Home/registro.cshtml
@@ -1,3 +1,8 @@
+@{
+    ViewData["Title"] = "Home Page";
+    Layout = "plantilla";
+}
+
 <body style="background-color: green; color:white;">
 <h1>Formulario de Registro</h1>
 
@@ -43,6 +48,6 @@
             <input type="text" name="direccion" id="" class="form-control">
         </div>
 
-        <button class="btn btn-primary">Registrarme</button>
+        <a asp-area="" asp-controller="Home" asp-action="RegistroConfirmacion" class="btn btn-primary">Adoptar Mascota</a>
     </form>
 </body>
