--- a/practica2/Views/Home/registroconfirmacion.cshtml
+++ b/practica2/Views/Home/registroconfirmacion.cshtml
@@ -1,3 +1,8 @@
+@{
+    ViewData["Title"] = "Home Page";
+    Layout = "plantilla";
+}
+
 <body style="background-color: green; color:white;">
     <h1>Formulario de Registro</h1>
 
